Fleshed out comments about prior d.f.

--- a/userguide/comments.Rnw
+++ b/userguide/comments.Rnw
@@ -703,8 +703,9 @@ The prior d.f. will be large if there is a systematic batch effect, e.g., due to
 This is because the variability of the dispersions will be low when all of them are consistently large to reflect the constant difference between replicates.
 In contrast, the prior d.f. will be small if there is a stochastic batch effect, e.g., due to hidden factors of variation.
 This is because the dispersions will now absorb the batch effect, which will differ randomly between windows.
-As a result, the variability in the dispersions will be large.
-Small prior d.f. can result in almost as much damage as large dispersions, so watch out.
+As a result, the variability in the dispersions will be increased.
+There mightn't ba large increase in the dispersions themselves due to a stochastic batch effect, as not all features will be heavily affected by the batch to cause a substantial increase in the fitted trend or the common estimate.
+However, small prior d.f. can result in almost as much damage as large dispersions, so watch out.
 
 \subsection*{Comments about FDR control}
 
