Added section on spike-in normalization.

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -50,7 +50,7 @@
 % Set to change date for document, not compile date.
 \date{First edition 15 August 2012\\
 \vspace{6pt}
-Last revised 15 August 2015}
+Last revised 24 August 2015}
 
 % Removing the bibliography title so it shows up in the contents.
 \makeatletter
@@ -1275,6 +1275,38 @@ Only one of these sets of values will ultimately be used by \edger{}.
 % On a practical level, though, the aveLogCPM calls in later functions do not use offset data.
 % So, you want to make sure you're removing the trend with respect to the average abundance that'll be used later on.
 % That's why I don't bother to iterate.
+
+\section{Scaling normalization with spike-in chromatin}
+Several studies have used spike-in chromatin for scaling normalization of ChIP-seq data \citep{bonhoure2014quantifying,orlando2014quantitative}.
+Briefly, chromatin or whole cells from a different species is added to each of the samples of interest at the start of the ChIP-seq protocol.
+The mixture is processed and sequenced in the usual manner, and the coverage of the spiked-in foreign chromatin is quantified in each library.
+The quantity of foreign chromatin added per cell should be constant in each sample, so the library size-adjusted coverage of the foreign genome should also be the same between libraries.
+Any difference in spike-in coverage between libraries represents some technical bias that should be removed by scaling.
+
+This normalization strategy can be implemented in \pkgname{} with some work.
+Assume that the \code{spike.data} object contains the counts for all spike-in regions (i.e., from the foreign genome) in each library.
+This object can be constructed by, e.g., running \code{windowCounts} on the BAM files obtained after aligning reads to the foreign genome.
+Normalization factors can be computed by applying the TMM method on these counts, as done before.
+In this calculation, the total number of reads for the endogenous genome is used as the library size.
+This ensures that the computed factors will yield effective library sizes that are relevant to the final analysis on the endogenous regions.
+Otherwise, if the total number of spike-in reads was used as the library size, the estimated factors would always be equal to unity.
+
+<<echo=FALSE, results="hide">>=
+spike.data <- data
+@
+
+<<>>=
+spike.facs <- normalize(spike.data, lib.sizes=data$totals)
+@
+
+The spike-in approach does not distinguish between composition and efficiency biases.
+Instead, it uses the differences in spike-in coverage to empirically measure and remove the net bias between libraries.
+This avoids the need for assumptions regarding the origin of any systematic differences between libraries.
+That said, spike-in normalization involves some (possibly strong) assumptions of its own.
+For example, the same quantity of spike-in chromatin per cell is assumed to be added in each sample.
+This requires accurate quantitation of the number of cells in each sample, followed by precise addition of small spike-in quantities.
+In addition, the behaviour of the spike-in chromatin is assumed to be the same as that of the endogenous chromatin throughout the ChIP-seq protocol.
+Whether these assumptions are reasonable will depend on the experimenter and the nature of the spike-ins. 
 
 \section{A word on other biases}
 No normalization is performed to adjust for differences in mappability or sequencability between different regions of the genome. 
