--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -369,5 +369,25 @@
 	Month="Sep"
 }
 
+@Article{bonhoure2014quantifying,
+    Author="Bonhoure, N.  and Bounova, G.  and Bernasconi, D.  and Praz, V.  and Lammers, F.  and Canella, D.  and Willis, I. M.  and Herr, W.  and Hernandez, N.  and Delorenzi, M.  and Hernandez, N.  and Delorenzi, M.  and Deplancke, B.  and Desvergne, B.  and Guex, N.  and Herr, W.  and Naef, F.  and Rougemont, J.  and Schibler, U.  and Andersin, T.  and Cousin, P.  and Gilardi, F.  and Gos, P.  and Lammers, F.  and Raghav, S.  and Villeneuve, D.  and Fabbretti, R.  and Vlegel, V.  and Xenarios, I.  and Migliavacca, E.  and Praz, V.  and David, F.  and Jarosz, Y.  and Kuznetsov, D.  and Liechti, R.  and Martin, O.  and Delafontaine, J.  and Cajan, J.  and Gustafson, K.  and Krier, I.  and Leleu, M.  and Molina, N.  and Naldi, A.  and Rib, L.  and Symul, L.  and Bounova, G. ",
+    Title="{{Q}uantifying {C}h{I}{P}-seq data: a spiking method providing an internal reference for sample-to-sample normalization}",
+    Journal="Genome Res.",
+    Year="2014",
+    Volume="24",
+    Number="7",
+    Pages="1157--1168",
+    Month="Jul"
+}
 
+@Article{orlando2014quantitative,
+    Author="Orlando, D. A.  and Chen, M. W.  and Brown, V. E.  and Solanki, S.  and Choi, Y. J.  and Olson, E. R.  and Fritz, C. C.  and Bradner, J. E.  and Guenther, M. G. ",
+    Title="{{Q}uantitative {C}h{I}{P}-{S}eq normalization reveals global modulation of the epigenome}",
+    Journal="Cell Rep.",
+    Year="2014",
+    Volume="9",
+    Number="3",
+    Pages="1163--1170",
+    Month="Nov"
+}
 
