Renamed normalize() to normOffsets().

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -50,7 +50,7 @@
 % Set to change date for document, not compile date.
 \date{First edition 15 August 2012\\
 \vspace{6pt}
-Last revised 25 August 2015}
+Last revised 29 August 2015}
 
 % Removing the bibliography title so it shows up in the contents.
 \makeatletter
@@ -137,7 +137,7 @@ data <- data[keep,]
 \item Calculating normalization factors.
 <<>>=
 binned <- windowCounts(bam.files, bin=TRUE, width=10000, param=param)
-normfacs <- normalize(binned)
+normfacs <- normOffsets(binned)
 @
 \item Identifying DB windows.
 <<>>=
@@ -1026,13 +1026,13 @@ Highly enriched regions consume more sequencing resources and thereby suppress t
 Differences in the magnitude of suppression between libraries can lead to spurious DB calls. 
 Scaling by library size fails to correct for this as composition biases can still occur in libraries of the same size. 
 
-To remove composition biases in \pkgname{}, reads are counted in large bins and the counts are used for normalization with the \code{normalize} wrapper function. 
+To remove composition biases in \pkgname{}, reads are counted in large bins and the counts are used for normalization with the \code{normOffsets} wrapper function.
 This uses the trimmed mean of M-values (TMM) method \citep{oshlack2010} to correct for any sytematic fold change in the coverage of the bins. 
 The assumption here is that most bins represent non-DB background regions so any consistent difference across bins must be spurious.
 
 <<>>=
 binned <- windowCounts(bam.files, bin=TRUE, width=10000, param=param)
-normfacs <- normalize(binned)
+normfacs <- normOffsets(binned)
 normfacs
 @
 
@@ -1041,7 +1041,7 @@ The size of each library is scaled by the corresponding factor to obtain an effe
 A larger normalization factor results in a larger effective library size and is conceptually equivalent to scaling each individual count downwards, given that the ratio of that count to the (effective) library size will be smaller. 
 Check out the \edger{} user's guide for more information.
 
-Note that the \code{normalize} method skips the precision weighting step in the TMM method.
+Note that the \code{normOffsets} method skips the precision weighting step in the TMM method.
 Weighting aims to increase the contribution of bins with high counts.
 However, these bins are more likely to contain binding sites and thus are more likely to be DB. 
 If any DB regions should survive trimming, upweighting them would be counterproductive. 
@@ -1068,9 +1068,9 @@ A value of 10 kbp is suitable for most datasets.
 
 <<>>=
 demo <- windowCounts(bam.files, bin=TRUE, width=5000, param=param)
-normalize(demo)
+normOffsets(demo)
 demo <- windowCounts(bam.files, bin=TRUE, width=15000, param=param)
-normalize(demo)
+normOffsets(demo)
 @
 
 These factors are consistently close to unity, which suggests that composition bias is negligble in this dataset.
@@ -1127,13 +1127,13 @@ me.files <- c("h3k4me3_mat.bam", "h3k4me3_pro.bam")
 me.demo <- windowCounts(me.files, width=150, param=param)
 me.bin <- windowCounts(me.files, bin=TRUE, width=10000, param=param) 
 keep <- filterWindows(me.demo, me.bin, type="global")$filter > log2(3)
-me.eff <- normalize(me.demo[keep,])
+me.eff <- normOffsets(me.demo[keep,])
 me.eff
 ac.files <- c("h3ac.bam", "h3ac_2.bam")
 ac.demo <- windowCounts(ac.files, width=150, param=param)
 ac.bin <- windowCounts(ac.files, bin=TRUE, width=10000, param=param)
 keep <- filterWindows(ac.demo, ac.bin, type="global")$filter > log2(5)
-ac.eff <- normalize(ac.demo[keep,])
+ac.eff <- normOffsets(ac.demo[keep,])
 ac.eff
 @
 \label{data:norm}
@@ -1159,9 +1159,9 @@ This is useful as the behavior of the entire genome can be examined, rather than
 It also allows calculation of and comparison to the factors for composition bias.
 
 <<>>=
-me.comp <- normalize(me.bin)
+me.comp <- normOffsets(me.bin)
 me.comp
-ac.comp <- normalize(ac.bin)
+ac.comp <- normOffsets(ac.bin)
 ac.comp
 @
 
@@ -1223,7 +1223,7 @@ spike.data <- data
 @
 
 <<>>=
-spike.facs <- normalize(spike.data, lib.sizes=data$totals)
+spike.facs <- normOffsets(spike.data, lib.sizes=data$totals)
 @
 
 The spike-in approach does not distinguish between composition and efficiency biases.
@@ -1242,7 +1242,7 @@ Thus, the magnitude of the bias between libraries will change with abundance.
 The trend cannot be corrected with scaling methods as no single scaling factor will remove differences at all abundances.
 Rather, non-linear methods are required, such as cyclic loess or quantile normalization.
 
-One such implementation is provided in \code{normalize} by setting \code{type="loess"}. 
+One such implementation is provided in \code{normOffsets} by setting \code{type="loess"}.
 This is based on the fast loess algorithm \citep{ballman2004} with minor adaptations to handle low counts. 
 A matrix is produced that contains an offset term for each bin/window in each library.
 This offset matrix can then be directly used in \edger{}, assuming that the bins or windows used in normalization are also the ones to be tested for DB.
@@ -1257,7 +1257,7 @@ ac.demo2 <- windowCounts(ac.files, width=2000L, param=param)
 filtered <- filterWindows(ac.demo2, ac.bin, type="global")
 keep <- filtered$filter > log2(4)
 ac.demo2 <- ac.demo2[keep,]
-ac.off <- normalize(ac.demo2, type="loess")
+ac.off <- normOffsets(ac.demo2, type="loess")
 head(ac.off)
 @
 
